[tool.poetry]
name = "poetry"
version = "0.1.0"
description = ""
authors = [""]

[tool.poetry.dependencies]
python = "^3.10"
polars = "^0.20.4"
numpy = "^1.26.3"
pandas = "^2.1.4"
jupyter = "^1.0.0"
ipykernel = "^6.29.0"
seaborn = "^0.13.1"
folium = "^0.15.1"

[tool.poetry.dev-dependencies]
pytest = "^7.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
